--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "name": "Luna Shu",
     "email": "luna_yj@hotmail.com"
   },
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-nc_ursa": "^0.1.4"
+  }
 }
