--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ls/common-utils",
+  "name": "@luna_shu/common-utils",
   "version": "1.0.0",
   "description": "Some Common Util Functions",
   "main": "index.js",
